tests/security/taintThroughResultGet/output.txt
ERROR: TaintedData - input.hack:33:14 - Data from a URL query string found its way to an HTML tag using path $_GET --array-fetch--> arrayvalue-fetch (input.hack:27:9) ----> foo#1 (input.hack:30:35) ----> $args (input.hack:30:35) ----> get_a_result#1 (input.hack:37:44) ----> $args (input.hack:37:44) --array-fetch--> $args['a'] (input.hack:38:25) ----> ResultOk::__construct#1 (input.hack:7:40) ----> $t (input.hack:7:40) ----> $this->t (input.hack:7:40) --property-assignment--> $this (input.hack:7:40) ----> $this in Result before __construct ----> $this in Result after __construct (input.hack:2:18) ----> $this in ResultOk after __construct (input.hack:7:18) ----> return (input.hack:38:12) ----> call to get_a_result (input.hack:37:52) ----> $a (input.hack:31:5) --refine-symbol--> $a narrowed to ResultOk (input.hack:32:9) ----> $this in ResultOk before get (input.hack:11:18) ----> $this (input.hack:12:10) --property-fetch--> $this->t (input.hack:12:17) ----> return (input.hack:12:10) ----> call to ResultOk::get (input.hack:11:25) ----> echo#1 (input.hack:33:14)